context/source-materials/legacy/changeswork-full/planning/mvp/versions/v6.5/tasks/mvp_tasks_pilots_page.md
# Задачи для страницы "Пилоты" (Pilots List View)

## Обзор страницы

**Страница:** Список пилотов (Pilots List View)
**Путь в макете:** Боковое меню → "Пилоты"
**Статус:** Адаптация существующей страницы

### Что показывает страница (из макета):

**Табличное представление со столбцами:**
- ID (PLT-XXX)
- Код пилота
- Название пилота
- Режим пилота (A/B тест/A/B/C тест/и т.д.)
- Статус пилота (draft/requires_activation/approval_rejected/ratification_rejected/active/completed/archived)
- Статус разметки (Да/Нет)
- Размеченные заявки (количество)
- Планируемая дата активации
- Планируемая дата выключения

**Функционал:**
- Фильтрация по продукту (dropdown)
- Фильтрация по статусу
- Поиск по названию
- Сортировка по столбцам
- Пагинация
- Клик на строку → переход к детальному просмотру

**Права доступа:**
- ПРМ видит пилоты по всем продуктам (read-only для чужих), но создавать/редактировать/отправлять на согласование может только пилоты своего продукта
- Методолог видит все пилоты
- Админ видит все пилоты

---

## AN-P1: Аналитика страницы "Пилоты"

**Тип:** Story
**Приоритет:** Критический
**Оценка:** 5 дней

### Summary
Детализация требований для адаптации страницы списка пилотов под новую архитектуру

### Description

Провести аналитику для адаптации страницы списка пилотов:

1. **Детализация бизнес-требований:**
   - Определить режимы пилота (A/B тест, A/B/C тест, и т.д.)
   - Уточнить логику статуса разметки (Да/Нет)
   - Определить правила подсчета размеченных заявок
   - Уточнить логику отображения статусов пилота
   - Определить правила доступа для разных ролей

2. **Спецификация UI/UX:**
   - Адаптация существующей таблицы (9 столбцов)
   - Спецификация фильтров и поиска
   - Дизайн статусных бейджей
   - Спецификация пагинации

3. **Спецификация API контракта:**
   - GET /api/pilots/ - список с фильтрацией
   - Параметры запроса (product_id, status, search, page, page_size, ordering)
   - Формат ответа (список + метаданные пагинации)
   - Коды ошибок (403, 404, 500)

4. **Определение полей таблицы:**
   - ID (формат PLT-XXX)
   - Код пилота (обязательное, уникальное в рамках продукта)
   - Название (обязательное, кликабельное)
   - Режим пилота (dropdown значения)
   - Статус пилота (цветной бейдж)
   - Статус разметки (бейдж Да/Нет)
   - Размеченные заявки (число)
   - Планируемая дата активации (формат DD.MM.YYYY)
   - Планируемая дата выключения (формат DD.MM.YYYY)

### Acceptance Criteria

- [ ] Бизнес-требования задокументированы
- [ ] API контракт задокументирован
- [ ] Определены все поля таблицы с типами данных
- [ ] Режимы пилота определены
- [ ] Логика статуса разметки определена
- [ ] Правила фильтрации и сортировки описаны
- [ ] Права доступа для ролей определены
- [ ] Документ согласован с заказчиком

### Dependencies
Нет

### Deliverables
- Документ "Спецификация страницы Пилоты" (markdown/confluence)
- API контракт для GET /api/pilots/

---
## BE-P1: Backend для страницы "Пилоты"

**Тип:** Story
**Приоритет:** Критический
**Оценка:** 2 дня

### Summary
Адаптация API endpoint для списка пилотов с фильтрацией, пагинацией и правами доступа

### Description

Адаптировать Backend API для страницы списка пилотов:

1. **API Endpoint: GET /api/pilots/**

   **Параметры запроса:**
   - `product_id` (optional) - фильтр по продукту
   - `status` (optional) - фильтр по статусу (draft/requires_activation/approval_rejected/ratification_rejected/active/completed/archived)
   - `search` (optional) - поиск по названию (case-insensitive, partial match)
   - `page` (optional, default=1) - номер страницы
   - `page_size` (optional, default=20) - размер страницы
   - `ordering` (optional, default='-created_at') - сортировка

   **Формат ответа:**
   ```json
   {
     "count": 42,
     "next": "http://api/pilots/?page=2",
     "previous": null,
     "results": [
       {
         "id": "uuid",
         "display_id": "PLT-001",
         "code": "PLT-PREMIUM-001",
         "name": "Пилот оптимизации лимитов Premium карт",
         "mode": "ab_test",
         "status": "active",
         "markup_status": true,
         "marked_applications_count": 1250,
         "planned_start_at": "2026-03-10",
         "planned_end_at": "2026-04-10",
         "created_at": "2026-03-01T10:00:00Z",
         "created_by": {
           "id": "user-uuid",
           "full_name": "Иван Иванов"
         }
       }
     ]
   }
   ```

2. **Бизнес-логика:**
   - Фильтрация по правам доступа:
     - ПРМ видит все (read-only для чужих)
     - Методолог видит все
     - Админ видит все
   - Поиск по названию (case-insensitive, ILIKE для PostgreSQL)
   - Сортировка по умолчанию: -created_at (новые первые)

3. **Права доступа:**
   - Middleware проверяет роль пользователя
   - Для list/read endpoints ПРМ может читать все продукты; ограничения применяются к операциям изменения (create/update/delete/submit)

4. **Оптимизация:**
   - Select related для created_by
   - Индексы на product_id, status, created_at

### Acceptance Criteria

- [ ] GET /api/pilots/ endpoint адаптирован
- [ ] Фильтрация по product_id, status работает
- [ ] Поиск по названию работает (case-insensitive)
- [ ] Пагинация работает корректно (default page_size=20)
- [ ] Сортировка по умолчанию: -created_at
- [ ] Права доступа реализованы (ПРМ читает все продукты; изменения только для своего продукта)
- [ ] Select related оптимизация применена
- [ ] Unit тесты покрывают все сценарии (coverage > 80%)
- [ ] API документация обновлена

### Dependencies
- AN-P1 (требуется API контракт)

### Technical Notes

**Пример SQL оптимизации (Django ORM):**
```python
from django.db.models import Q

Pilot.objects.filter(
    Q(name__icontains=search),
    product_id=product_id,
    status=status
).select_related(
    'created_by'
).order_by('-created_at')
```

---

## FE-P1: Frontend для страницы "Пилоты"

**Тип:** Story
**Приоритет:** Критический
**Оценка:** 2 дня

### Summary
Адаптация UI страницы списка пилотов с таблицей, фильтрами и поиском

### Description

Адаптировать Frontend для страницы списка пилотов:

1. **Компонент PilotsView:**
   - Табличное представление (Material-UI Table)
   - Столбцы: ID, Код пилота, Название, Режим, Статус пилота, Статус разметки, Размеченные заявки, Планируемая дата активации, Планируемая дата выключения
   - Responsive дизайн

2. **Фильтры и поиск:**
   - Dropdown фильтр по продукту
   - Dropdown фильтр по статусу
   - Поле поиска по названию (debounce 300ms)
   - Кнопка "Сбросить фильтры"

3. **Сортировка:**
   - По умолчанию: по дате создания (новые первые)
   - Клик на заголовок столбца → сортировка
   - Индикатор направления сортировки

4. **Пагинация:**
   - Material-UI Pagination компонент
   - Показывать "Показано X-Y из Z"
   - Выбор размера страницы (10/20/50)

   5. **Статусные бейджи:**
      - **Статус пилота:**
         - draft: серый
         - requires_activation: оранжевый
         - active: синий (анимация)
         - approval_rejected: красный
         - ratification_rejected: красный
         - completed: зеленый
         - archived: серый с opacity
   - **Статус разметки:**
     - Да: зеленый
     - Нет: серый

6. **Навигация:**
   - Клик на строку → переход к детальному просмотру
   - Breadcrumbs: "Пилоты"

7. **Loading и Error состояния:**
   - Skeleton loader при загрузке
   - Error message при ошибке API
   - Empty state если нет данных

8. **API интеграция:**
   - PilotService.getList(filters, page, pageSize, ordering)
   - Обработка ошибок (403, 404, 500)
   - Toast уведомления при ошибках

### Acceptance Criteria

- [ ] PilotsView компонент адаптирован
- [ ] Таблица отображает все 9 столбцов корректно
- [ ] Фильтр по продукту работает
- [ ] Фильтр по статусу работает
- [ ] Поиск по названию работает (с debounce)
- [ ] Сортировка по столбцам работает
- [ ] Пагинация работает корректно
- [ ] Статусные бейджи отображаются с правильными цветами
- [ ] Статус "active" имеет анимацию
- [ ] Статус разметки отображается корректно (Да/Нет)
- [ ] Клик на строку открывает детальный просмотр
- [ ] Breadcrumbs отображается корректно
- [ ] Loading состояние (skeleton) работает
- [ ] Error состояние отображается
- [ ] Empty state отображается если нет данных
- [ ] Responsive дизайн работает
- [ ] API интеграция работает корректно
- [ ] Обработка ошибок реализована
- [ ] Unit тесты для компонента (coverage > 70%)

### Dependencies
- AN-P1 (требуется UI спецификация)
- BE-P1 (требуется готовый API endpoint)

---

## Итоговая зависимость задач

```
AN-P1 (1 день)
  ↓
BE-P1 (2 дня)
  ↓
FE-P1 (2 дня)
```

**Общая длительность (критический путь):** 5 дней

**Параллельная работа:**
- BE-P1 может начаться сразу после AN-P1
- FE-P1 может начаться только после готовности BE-P1

---

## ✅ Ключевые особенности страницы

1. **Адаптация существующей страницы** - не новая разработка
2. **9 столбцов в таблице** - ID, Код, Название, Режим, Статус пилота, Статус разметки, Размеченные заявки, Планируемая дата активации, Планируемая дата выключения
3. **Код пилота** - уникальное поле в рамках продукта
4. **Режим пилота** - A/B тест, A/B/C тест и т.д.
5. **Статус разметки** - дополнительное поле (Да/Нет)
6. **Размеченные заявки** - счетчик marked_applications_count
7. **Планируемые даты** - дата активации и выключения
8. **Статус "active" с анимацией** - визуальный индикатор активного пилота
9. **Фильтрация по продукту и статусу** - dropdown фильтры
10. **Поиск по названию** - с debounce 300ms
11. **Сортировка по умолчанию** - по дате создания (новые первые)
12. **Права доступа** - ПРМ видит все продукты (read-only для чужих), изменения только для своего продукта
13. **Responsive дизайн** - адаптация под разные разрешения

---
